# P.api

./: README.md
.devcontainer/: devcontainer.json  docker-compose.yml  requirements.txt
fastapi-app/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-app/app/: main.py
fastapi-app/app/api/v1/: events.py
fastapi-app/app/core/: config.py
fastapi-app/app/schemas/: event.py
fastapi-app/app/services/: db.py
fastapi-app/scripts/: test_postgres.py
fastapi-app/tests/: test_health.py
